--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -470,8 +470,10 @@ pyqt6-dev-tools:
   fedora: [python3-pyqt6-base]
   ubuntu:
     '*': [pyqt6-dev-tools]
-    focal: null
-    jammy: null
+    focal:
+      pip: PyQt6
+    jammy:
+      pip: PyQt6
 pyrebase-pip:
   debian:
     pip:
