--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -471,9 +471,11 @@ pyqt6-dev-tools:
   ubuntu:
     '*': [pyqt6-dev-tools]
     focal:
-      pip: PyQt6
+      pip: 
+        packages: [PyQt6]
     jammy:
-      pip: PyQt6
+      pip: 
+        packages: [PyQt6]
 pyrebase-pip:
   debian:
     pip:
