--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8487,8 +8487,8 @@ python3-pytest-xvfb:
   nixos: [python312Packages.pytest-xvfb]
   opensuse: [python3-pytest-xvfb]
   rhel:
-    "*": [python3-pytest-xvfb]
-    "7": ['python%{python3_pkgversion}-pytest-xvfb']
+    pip:
+      packages: [pytest-xvfb]
   ubuntu: [python3-pytest-xvfb]
 python3-pytorch-pip: *migrate_eol_2025_04_30_python3_pytorch_pip
 python3-pytrinamic-pip:
