--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6950,6 +6950,16 @@ python3-matplotlib:
     '7': null
   slackware: [python3-matplotlib]
   ubuntu: [python3-matplotlib]
+python3-mavproxy-pip:
+ debian:
+    pip:
+      packages: [MAVProxy]
+  fedora:
+    pip:
+      packages: [MAVProxy]
+  ubuntu:
+    pip:
+      packages: [MAVProxy]
 python3-mccabe:
   arch: [python-mccabe]
   debian: [python3-mccabe]
