--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8246,6 +8246,19 @@ python3-pyproj:
     '*': ['python%{python3_pkgversion}-pyproj']
     '7': null
   ubuntu: [python3-pyproj]
+python3-pyqtdarktheme-pip:
+   debian:
+    pip:
+      packages: [pyqtdarktheme]
+  fedora:
+    pip:
+      packages: [pyqtdarktheme]
+  osx:
+    pip:
+      packages: [pyqtdarktheme]
+  ubuntu:
+    pip:
+      packages: [pyqtdarktheme]
 python3-pyqrcode:
   arch: [python-qrcode]
   debian: [python3-pyqrcode]
