flir_camera_driver: point all src/doc to ros2-release branch

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -1736,7 +1736,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-drivers/flir_camera_driver.git
-      version: rolling-release
+      version: ros2-release
     release:
       packages:
       - flir_camera_description
@@ -1750,7 +1750,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-drivers/flir_camera_driver.git
-      version: rolling-release
+      version: ros2-release
     status: maintained
   fluent_rviz:
     doc:
