--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -2256,7 +2256,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-drivers/flir_camera_driver.git
-      version: humble-release
+      version: ros2-release
     release:
       packages:
       - flir_camera_description
@@ -2270,7 +2270,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-drivers/flir_camera_driver.git
-      version: humble-release
+      version: ros2-release
     status: maintained
   fluent_bit_vendor:
     source:
