--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -1664,7 +1664,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-drivers/flir_camera_driver.git
-      version: iron-release
+      version: ros2-release
     release:
       packages:
       - flir_camera_description
@@ -1678,7 +1678,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-drivers/flir_camera_driver.git
-      version: iron-release
+      version: ros2-release
     status: maintained
   fluent_rviz:
     doc:
