--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -1689,7 +1689,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-drivers/flir_camera_driver.git
-      version: rolling-release
+      version: ros2-release
     release:
       packages:
       - flir_camera_description
@@ -1703,7 +1703,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-drivers/flir_camera_driver.git
-      version: rolling-release
+      version: ros2-release
     status: maintained
   fluent_rviz:
     doc:
