--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -6012,21 +6012,13 @@ repositories:
   ros2_ouster_drivers:
     doc:
       type: git
-      url: https://github.com/SteveMacenski/ros2_ouster_drivers.git
-      version: foxy-devel
-    release:
-      packages:
-      - ouster_msgs
-      - ros2_ouster
-      tags:
-        release: release/jazzy/{package}/{version}
-      url: https://github.com/ros2-gbp/ros2_ouster_drivers-release.git
-      version: 0.5.1-5
+      url: https://github.com/ros-drivers/ros2_ouster_drivers.git
+      version: ros2
     source:
       test_pull_requests: true
       type: git
-      url: https://github.com/SteveMacenski/ros2_ouster_drivers.git
-      version: foxy-devel
+      url: https://github.com/ros-drivers/ros2_ouster_drivers.git
+      version: ros2
     status: maintained
   ros2_robotiq_gripper:
     doc:
