--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -7790,7 +7790,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-tooling/topic_tools.git
-      version: rolling
+      version: jazzy
     release:
       packages:
       - topic_tools
@@ -7802,7 +7802,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-tooling/topic_tools.git
-      version: rolling
+      version: jazzy
     status: developed
   trac_ik:
     doc:
