--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8303,6 +8303,11 @@ python3-pyqt5.qtwebengine:
   openembedded: ['${PYTHON_PN}-pyqt5@meta-qt5']
   opensuse: [python3-qtwebengine-qt5]
   ubuntu: [python3-pyqt5.qtwebengine]
+python3-pyqt6.qtmultimedia:
+  debian: [python3-pyqt6.qtmultimedia]
+  ubuntu:
+    '*': null
+    'noble': [python3-pyqt6.qtmultimedia]
 python3-pyqtdarktheme-pip:
   debian:
     pip:
