odri_master_board: 1.0.7-1 in 'jazzy/distribution.yaml' [bloom]

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -4289,13 +4289,21 @@ repositories:
       version: master
     status: maintained
   odri_master_board:
+    doc:
+      type: git
+      url: https://github.com/stack-of-tasks/odri_master_board_sdk_release.git
+      version: main
     release:
       packages:
       - odri_master_board_sdk
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/odri_master_board_sdk-release.git
-      version: 1.0.6-5
+      version: 1.0.7-1
+    source:
+      type: git
+      url: https://github.com/stack-of-tasks/odri_master_board_sdk_release.git
+      version: main
     status: maintained
   odri_master_board_sdk:
     doc:
