--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -10142,6 +10142,16 @@ tilestache:
   debian: [tilestache]
   fedora: [python-tilestache]
   ubuntu: [tilestache]
+tinkerforge:
+  debian:
+    pip:
+      packages: [tinkerforge]
+  fedora:
+    pip:
+      packages: [tinkerforge]
+  ubuntu:
+    pip:
+      packages: [tinkerforge]
 uavcan-pip:
   debian:
     pip:
