Add missing nixos rules

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -4552,6 +4552,7 @@ libnss3-dev:
 liboctomap-dev:
   debian: [liboctomap-dev]
   fedora: [octomap-devel]
+  nixos: [octomap]
   rhel: [octomap-devel]
   ubuntu: [liboctomap-dev]
 libogg:
