kuka_drivers: 0.9.1-1 in 'humble/distribution.yaml' [bloom]

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -3410,6 +3410,26 @@ repositories:
       type: git
       url: https://github.com/kroshu/kuka_drivers.git
       version: master
+    release:
+      packages:
+      - fri_configuration_controller
+      - fri_state_broadcaster
+      - iiqka_moveit_example
+      - joint_group_impedance_controller
+      - kuka_control_mode_handler
+      - kuka_controllers
+      - kuka_driver_interfaces
+      - kuka_drivers
+      - kuka_drivers_core
+      - kuka_event_broadcaster
+      - kuka_iiqka_eac_driver
+      - kuka_kss_rsi_driver
+      - kuka_rsi_simulator
+      - kuka_sunrise_fri_driver
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/kuka_drivers-release.git
+      version: 0.9.1-1
     source:
       type: git
       url: https://github.com/kroshu/kuka_drivers.git
