--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -3900,6 +3900,12 @@ repositories:
       url: https://github.com/boschglobal/locator_ros_bridge.git
       version: humble
     status: maintained
+  log_view:
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/hatchbed/log_view-release.git
+      version: 0.2.3-1
   lsc_ros2_driver:
     doc:
       type: git
