Fix tbb nixos rosdep key

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -8443,7 +8443,7 @@ tbb:
   fedora: [tbb-devel]
   gentoo: [dev-cpp/tbb]
   macports: [tbb]
-  nixos: [tbb_2021_8]
+  nixos: [tbb]
   openembedded: [tbb@meta-oe]
   opensuse: [tbb-devel]
   rhel: [tbb-devel]
