--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8458,6 +8458,16 @@ python3-pytest-mock:
       packages: [pytest-mock]
   rhel: ['python%{python3_pkgversion}-pytest-mock']
   ubuntu: [python3-pytest-mock]
+python3-pytest-ruff-pip:
+  debian:
+    pip:
+      packages: [pytest-ruff]
+  fedora:
+    pip:
+      packages: [pytest-ruff]
+  ubuntu:
+    pip:
+      packages: [pytest-ruff]
 python3-pytest-timeout:
   arch: [python-pytest-timeout]
   debian: [python3-pytest-timeout]
