--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -6043,6 +6043,12 @@ repositories:
       url: https://github.com/Kinovarobotics/ros2_kortex.git
       version: main
     status: developed
+  ros2_openai_server:
+    source:
+      type: git
+      url: https://github.com/robosoft-ai/ros2_openai_server.git
+      version: jazzy
+    status: developed
   ros2_ouster_drivers:
     doc:
       type: git
