Add initial `source` entry for ros2_openai_server (humble)

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -7487,6 +7487,12 @@ repositories:
       url: https://github.com/Kinovarobotics/ros2_kortex.git
       version: main
     status: developed
+  ros2_openai_server:
+    source:
+      type: git
+      url: https://github.com/robosoft-ai/ros2_openai_server.git
+      version: humble
+    status: developed
   ros2_ouster_drivers:
     doc:
       type: git
