--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -6151,10 +6151,11 @@ repositories:
     release:
       packages:
       - turtlesim
+      - turtlesim_msgs
       tags:
         release: release/rolling/{package}/{version}
       url: https://github.com/ros2-gbp/ros_tutorials-release.git
-      version: 1.9.1-1
+      version: 1.9.2-1
     source:
       test_pull_requests: true
       type: git
