--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8304,7 +8304,9 @@ python3-pyqt5.qtwebengine:
   opensuse: [python3-qtwebengine-qt5]
   ubuntu: [python3-pyqt5.qtwebengine]
 python3-pyqt6.qtmultimedia:
-  debian: [python3-pyqt6.qtmultimedia]
+  debian:
+    bullseye: null
+    '*': [python3-pyqt6.qtmultimedia]
   ubuntu:
     '*': null
     'noble': [python3-pyqt6.qtmultimedia]
