Add source for log_view

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -3906,6 +3906,10 @@ repositories:
         release: release/humble/{package}/{version}
       url: https://github.com/hatchbed/log_view-release.git
       version: 0.2.3-1
+    source:
+      type: git
+      url: https://github.com/hatchbed/log_view.git
+      version: ros2
   lsc_ros2_driver:
     doc:
       type: git
