--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9856,6 +9856,12 @@ python3-urllib3:
   gentoo: [dev-python/urllib3]
   nixos: [python3Packages.urllib3]
   ubuntu: [python3-urllib3]
+python3-urwid:
+  debian: [python3-urwid]
+  fedora: [python3-urwid]
+  opensuse: [python3-urwid]
+  rhel: [python3-urwid]
+  ubuntu: [python3-urwid]
 python3-usb:
   debian: [python3-usb]
   gentoo: [dev-python/pyusb]
