Update package name

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -7251,6 +7251,16 @@ repositories:
       url: https://github.com/ros2/rmw_implementation.git
       version: humble
     status: developed
+  robosoft_openai:
+    doc:
+      type: git
+      url: https://github.com/robosoft-ai/robosoft_openai.git
+      version: humble
+    source:
+      type: git
+      url: https://github.com/robosoft-ai/robosoft_openai.git
+      version: humble
+    status: developed
   robot_calibration:
     doc:
       type: git
@@ -7486,12 +7496,6 @@ repositories:
       type: git
       url: https://github.com/Kinovarobotics/ros2_kortex.git
       version: main
-    status: developed
-  ros2_openai_server:
-    source:
-      type: git
-      url: https://github.com/robosoft-ai/ros2_openai_server.git
-      version: humble
     status: developed
   ros2_ouster_drivers:
     doc:
