Update package name

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -5875,6 +5875,16 @@ repositories:
       url: https://github.com/ros2/rmw_implementation.git
       version: jazzy
     status: developed
+  robosoft_openai:
+    doc:
+      type: git
+      url: https://github.com/robosoft-ai/robosoft_openai.git
+      version: jazzy
+    source:
+      type: git
+      url: https://github.com/robosoft-ai/robosoft_openai.git
+      version: jazzy
+    status: developed
   robot_calibration:
     doc:
       type: git
@@ -6042,12 +6052,6 @@ repositories:
       type: git
       url: https://github.com/Kinovarobotics/ros2_kortex.git
       version: main
-    status: developed
-  ros2_openai_server:
-    source:
-      type: git
-      url: https://github.com/robosoft-ai/ros2_openai_server.git
-      version: jazzy
     status: developed
   ros2_ouster_drivers:
     doc:
