--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -4033,6 +4033,11 @@ repositories:
       type: git
       url: https://github.com/brow1633/network_bridge.git
       version: main
+    release:
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/network_bridge-release.git
+      version: 1.0.2-1
     source:
       type: git
       url: https://github.com/brow1633/network_bridge.git
