Added luma.core and luma.oled

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6866,6 +6866,14 @@ python3-lockfile:
   opensuse: [python-lockfile]
   rhel: [python3-lockfile]
   ubuntu: [python3-lockfile]
+python3-luma.core-pip:
+  "*":
+    pip:
+      package: [luma.core]
+python3-luma.oled-pip:
+  "*":
+    pip:
+      package: [luma.oled]
 python3-lttng:
   alpine: [py3-lttng]
   arch: [python-lttngust]
