Fixed yaml format

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6869,11 +6869,11 @@ python3-lockfile:
 python3-luma.core-pip:
   '*':
     pip:
-      package: [luma.core]
+      packages: [luma.core]
 python3-luma.oled-pip:
   '*':
     pip:
-      package: [luma.oled]
+      packages: [luma.oled]
 python3-lttng:
   alpine: [py3-lttng]
   arch: [python-lttngust]
