Fixed yaml format

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6866,11 +6866,11 @@ python3-lockfile:
   opensuse: [python-lockfile]
   rhel: [python3-lockfile]
   ubuntu: [python3-lockfile]
-python3-luma.core-pip:
+python3-luma-core-pip:
   '*':
     pip:
       packages: [luma.core]
-python3-luma.oled-pip:
+python3-luma-oled-pip:
   '*':
     pip:
       packages: [luma.oled]
