classic_bags: 0.2.0-1 in 'humble/distribution.yaml' [manual]

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -1078,16 +1078,17 @@ repositories:
     doc:
       type: git
       url: https://github.com/MetroRobots/classic_bags.git
-      version: main
+      version: humble
     release:
       tags:
         release: release/humble/{package}/{version}
       url: https://github.com/ros2-gbp/classic_bags-release.git
-      version: 0.1.0-1
+      version: 0.2.0-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/MetroRobots/classic_bags.git
-      version: main
+      version: humble
     status: developed
   clearpath_common:
     doc:
