Update source and doc branch names

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -804,7 +804,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/MetroRobots/classic_bags.git
-      version: main
+      version: iron
     release:
       tags:
         release: release/iron/{package}/{version}
@@ -814,7 +814,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/MetroRobots/classic_bags.git
-      version: main
+      version: iron
     status: developed
   color_names:
     doc:
