--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -804,17 +804,17 @@ repositories:
     doc:
       type: git
       url: https://github.com/MetroRobots/classic_bags.git
-      version: main
+      version: iron
     release:
       tags:
         release: release/iron/{package}/{version}
       url: https://github.com/ros2-gbp/classic_bags-release.git
-      version: 0.1.0-1
+      version: 0.3.0-1
     source:
       test_pull_requests: true
       type: git
       url: https://github.com/MetroRobots/classic_bags.git
-      version: main
+      version: iron
     status: developed
   color_names:
     doc:
