--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9887,7 +9887,9 @@ python3-uvloop:
   ubuntu: [python3-uvloop]
 python3-vcstool:
   alpine: [vcstool]
-  debian: [python3-vcstool]
+  debian: 
+    '*': [python3-vcstool]
+    'bullseye': [python3-vcstools]
   fedora: [python3-vcstool]
   gentoo: [vcstool]
   macports:
