camera_aravis2: 1.0.0-1 in 'jazzy/distribution.yaml' [bloom]

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -813,6 +813,14 @@ repositories:
       type: git
       url: https://github.com/FraunhoferIOSB/camera_aravis2.git
       version: main
+    release:
+      packages:
+      - camera_aravis2
+      - camera_aravis2_msgs
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/camera_aravis2-release.git
+      version: 1.0.0-1
     source:
       test_pull_requests: true
       type: git
