--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -923,6 +923,7 @@ repositories:
       url: https://github.com/ros2-gbp/classic_bags-release.git
       version: 0.4.0-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/MetroRobots/classic_bags.git
       version: main
