--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -9889,7 +9889,7 @@ python3-vcstool:
   alpine: [vcstool]
   debian:
     '*': [python3-vcstool]
-    bullseye: [python3-vcstools]
+    bullseye: [vcstool]
   fedora: [python3-vcstool]
   gentoo: [vcstool]
   macports:
