--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7730,6 +7730,10 @@ python3-pip:
   opensuse: [python3-pip]
   rhel: [python3-pip]
   ubuntu: [python3-pip]
+python3-pipython-pip:
+  '*':
+    pip:
+      packages: [PIPython]
 python3-pkg-resources:
   alpine: [py3-setuptools]
   arch: [python-setuptools]
