--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -4988,6 +4988,16 @@ repositories:
       url: https://github.com/koide3/ndt_omp.git
       version: master
     status: developed
+  neo_nav2_bringup:
+    doc:
+      type: git
+      url: https://github.com/neobotix/neo_nav2_bringup.git
+      version: humble
+    source:
+      type: git
+      url: https://github.com/neobotix/neo_nav2_bringup.git
+      version: humble
+    status: maintained
   neo_simulation2:
     doc:
       type: git
