Update to main branch

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -7233,7 +7233,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/RoboSense-LiDAR/rslidar_sdk.git
-      version: dev
+      version: main
     release:
       tags:
         release: release/jazzy/{package}/{version}
@@ -7242,7 +7242,7 @@ repositories:
     source:
       type: git
       url: https://github.com/RoboSense-LiDAR/rslidar_sdk.git
-      version: dev
+      version: main
     status: maintained
   rt_manipulators_cpp:
     doc:
