Add in networkmanager key for RHEL.
Signed-off-by: Chris Lalancette <clalancette@gmail.com>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7227,6 +7227,7 @@ network-manager:
   gentoo: [net-misc/networkmanager]
   nixos: [networkmanager]
   opensuse: [NetworkManager]
+  rhel: [NetworkManager]
   ubuntu: [network-manager]
 ninja-build:
   arch: [ninja]
