--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -5170,6 +5170,19 @@ repositories:
       url: https://github.com/ros-drivers/nmea_navsat_driver.git
       version: ros2
     status: maintained
+  nmea_parser:
+    doc:
+      type: git
+      url: https://github.com/HundredGB/nmea_parser.git
+      version: 0.0.1
+    release:
+    tags:
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/HundredGB/nmea_parser.git
+      version: 0.0.1
+      status: maintained
   nodl:
     doc:
       type: git
