--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -5181,7 +5181,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/HundredGB/nmea_parser.git
-      version: 0.0.1
+      version: ros2
       status: maintained
   nodl:
     doc:
