--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -8086,7 +8086,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-teleop/twist_mux.git
-      version: foxy-devel
+      version: humble
     release:
       tags:
         release: release/iron/{package}/{version}
@@ -8095,7 +8095,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-teleop/twist_mux.git
-      version: foxy-devel
+      version: humble
     status: maintained
   twist_mux_msgs:
     doc:
