Adding kinematics_interface_pinocchio to documentation index for distro

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -3402,6 +3402,11 @@ repositories:
       url: https://github.com/ros-controls/kinematics_interface.git
       version: humble
     status: developed
+  kinematics_interface_pinocchio:
+    doc:
+      type: git
+      url: https://github.com/justagist/kinematics_interface_pinocchio
+      version: main
   kobuki_core:
     doc:
       type: git
