--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -5174,14 +5174,14 @@ repositories:
     doc:
       type: git
       url: https://github.com/HundredGB/nmea_parser.git
-      version: 0.0.1
+      version: main
     release:
     tags:
     source:
       test_pull_requests: true
       type: git
       url: https://github.com/HundredGB/nmea_parser.git
-      version: ros2
+      version: main
       status: maintained
   nodl:
     doc:
