add debian to nep

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7233,6 +7233,9 @@ python3-nclib-pip:
     pip:
       packages: [nclib]
 python3-nep-pip:
+  debian:
+    pip:
+      packages: [nep]
   osx:
     pip:
       packages: [nep]
