--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -5416,12 +5416,12 @@ repositories:
       packages:
       - omni_base_2dnav
       - omni_base_laser_sensors
-      - omni_base_maps
       - omni_base_navigation
+      - omni_base_rgbd_sensors
       tags:
         release: release/humble/{package}/{version}
       url: https://github.com/pal-gbp/omni_base_navigation-release.git
-      version: 2.0.7-1
+      version: 2.1.1-1
     source:
       type: git
       url: https://github.com/pal-robotics/omni_base_navigation.git
