--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7232,6 +7232,16 @@ python3-nclib-pip:
   ubuntu:
     pip:
       packages: [nclib]
+python3-nep-pip:
+  debian:
+    pip:
+      packages: [nep]
+  osx:
+    pip:
+      packages: [nep]
+  ubuntu:
+    pip:
+      packages: [nep]
 python3-nest-asyncio:
   alpine: [py3-nest_asyncio]
   arch: [python-nest-asyncio]
