--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8247,6 +8247,16 @@ python3-pyosmium:
   fedora: [python3-osmium]
   nixos: [python3Packages.pyosmium]
   ubuntu: [python3-pyosmium]
+python3-pyotp-pip:
+  debian:
+    pip:
+      packages: [pyotp]
+  fedora:
+    pip:
+      packages: [pyotp]
+  ubuntu:
+    pip:
+      packages: [pyotp]
 python3-pyparsing:
   arch: [python-pyparsing]
   debian: [python3-pyparsing]
