Add hector_rviz_overlay to jazzy

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -2572,6 +2572,24 @@ repositories:
       url: https://github.com/tier4/heaphook.git
       version: main
     status: maintained
+  hector_rviz_overlay:
+    source:
+      type: git
+      url: https://github.com/tu-darmstadt-ros-pkg/hector_rviz_overlay.git
+      version: jazzy
+    status: maintained
+  hector_rviz_overlay_controls:
+    source:
+      type: git
+      url: https://github.com/tu-darmstadt-ros-pkg/hector_rviz_overlay.git
+      version: jazzy
+    status: maintained
+  hector_rviz_overlay_demo:
+    source:
+      type: git
+      url: https://github.com/tu-darmstadt-ros-pkg/hector_rviz_overlay.git
+      version: jazzy
+    status: maintained
   hls_lfcd_lds_driver:
     doc:
       type: git
