added python3-requests-toolbelt, python3-imutils-pip and python3-simplekml-pip. added Arch Linux for python3-requests

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6649,6 +6649,10 @@ python3-importlib-resources:
     bionic:
       pip:
         packages: [importlib-resources]
+python3-imutils-pip:
+  '*':
+    pip:
+      packages: [imutils]
 python3-inflection:
   arch: [python-inflection]
   debian: [python3-inflection]
@@ -8780,6 +8784,7 @@ python3-reportlab:
 python3-requests:
   debian: [python3-requests]
   fedora: [python3-requests]
+  arch: [python-requests]
   gentoo: [dev-python/requests]
   nixos: [python3Packages.requests]
   openembedded: [python3-requests@meta-python]
@@ -8800,6 +8805,18 @@ python3-requests-oauthlib:
     '*': ['python%{python3_pkgversion}-requests-oauthlib']
     '7': null
   ubuntu: [python3-requests-oauthlib]
+python3-requests-toolbelt:
+  debian: [python3-requests-toolbelt]
+  ubuntu: [python3-requests-toolbelt]
+  arch: [python-requests-toolbelt]
+  gentoo: [dev-python/requests-toolbelt]
+  openembedded: [python3-requests-toolbelt@meta-python]
+  fedora: [python3-requests-toolbelt]
+  nixos: [python3Packages.requests-toolbelt]
+  opensuse: [python-requests-toolbelt]
+  rhel:
+    '8': ['python%{python3_pkgversion}-requests-toolbelt']
+    '9': ['python%{python3_pkgversion}-requests-toolbelt']
 python3-retrying:
   arch: [python-retrying]
   debian: [python3-retrying]
@@ -9207,6 +9224,10 @@ python3-simplejpeg-pip:
   ubuntu:
     pip:
       packages: [simplejpeg]
+python3-simplekml-pip:
+  '*':
+    pip:
+      packages: [simplekml]
 python3-simplejson:
   arch: [python-simplejson]
   debian: [python3-simplejson]
