Added PySide6 with pip.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -8536,6 +8536,10 @@ python3-pyside2.qtwidgets:
     '*': [python3-pyside2]
     '8': null
   ubuntu: [python3-pyside2.qtwidgets]
+python3-pyside6-pip:
+  '*':
+    pip:
+      packages: ["PySide6"]
 python3-pysnmp:
   debian: [python3-pysnmp4]
   fedora: [python3-pysnmp]
